[package]
name = "osc"
version = "0.1.0"
authors = ["nnmm <nnmmgit@gmail.com>"]

[[bin]]
name = "rscope"
path = "src/main.rs"

[dependencies]
chan = "0.1.19"
chan-signal = "0.2.0"
getopts = "0.2"
gfx = { git = "https://github.com/gfx-rs/gfx.git" }
gfx_window_glutin = { git = "https://github.com/gfx-rs/gfx.git" }
glutin ="*"
jack = "0.5.0"
structopt = "*"
structopt-derive = "*"
